# docs/go-api/swagger.json
@@ -34,6 +34,14 @@
                     "Users"
                 ],
                 "summary": "Lists all users details.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "name",
+                        "name": "name",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -48,6 +56,11 @@
                         }
                     }
                 }
+            }
+        },
+        "/users/{id}": {
+            "get": {
+                "responses": {}
             }
         }
     },
